# flex

./: .clang-format  .gitignore  BaseAcceptor.cpp  BaseAcceptor.h  BaseAcceptor.inl  BaseFactory.cpp  BaseFactory.h  BaseFactory.inl  BaseProtocol.cpp  BaseProtocol.h  CMakeLists.txt  ClientFactory.cpp  ClientFactory.h  LICENSE  Protocol.cpp  Protocol.h  ServiceProtocol.cpp  ServiceProtocol.h  TcpListener.h  TcpListener.inl  Transport.cpp  Transport.h  format.sh  main.cpp  sgi_plus.h
factory/: AutoConnector.cpp  AutoConnector.h  BaseFactory.cpp  BaseFactory.h  BaseFactory.inl  ClientFactory.cpp  ClientFactory.h  Connector.cpp  Connector.h  Connector.inl
listener/: Listener.h  TcpListener.cpp  TcpListener.h  TcpListener.inl
protocol/: BaseProtocol.cpp  BaseProtocol.h  GenericProtocol.cpp  GenericProtocol.h  Protocol.cpp  Protocol.h
transport/: BaseTransport.cpp  BaseTransport.h  NetlinkTransport.cpp  NetlinkTransport.h  SslTransport.cpp  SslTransport.h  Strategy.cpp  Strategy.h  TcpTransport.cpp  TcpTransport.h  Transport.cpp  Transport.h  UnixSocketTransport.cpp  UnixSocketTransport.h
transport/boost/asio/: endpoint.hpp  netlink.hpp
transport/boost_netlink/: nl_endpoint.hpp  nl_protocol.hpp
utils/: KeyVariant.h
